onglet Solutions (Consulting)

--- a/mon-site-web/footer.html
+++ b/mon-site-web/footer.html
@@ -6,7 +6,7 @@
   <!-- FOOTER -->
   <footer>
   <p class="pull-right"><a href="#">Back to top</a></p>
-  <p>J.A Datatech Consulting&mdash;London</p>
+  <p>Josué AFOUDA&mdash;France</p>
   <p><a href="#" data-toggle="modal" data-target="#modal-contacts">Contact us</a></p>
   </footer>
 
@@ -21,13 +21,11 @@
   <h4 class="modal-title" id="myModalLabel">Contacts</h4>
   </div>
   <div class="modal-body">
-    <p>Vous pouvez nous écrire à l'adresse mail j.a.datatech.consulting@gmail.com où nous appeler directement au +33(0)773566680.</p>
+    <p>Vous pouvez nous écrire à l'adresse mail afouda.josue@gmail.com ou j.a.datatech.consulting@gmail.com</p>
     <!-- Mettre un lien dans un paragraphe : <p>Select symbols used from <a href="http://www.thenounproject.com">The Noun Project</a>:</p> -->
     <p>Retrouvez également sur nos réseaux sociaux:</p>
-    <p><a href="https://www.linkedin.com/in/ja-datatech-consulting-741693217/">Linkedin</a></p>
+    <p><a href="https://www.linkedin.com/in/josu%C3%A9-afouda">Linkedin</a></p>
     <p><a href="https://www.youtube.com/channel/UCpd56FfjlkKbkHlbgY6XE3w">YouTube</a></p>
-    <p><a href="https://www.linkedin.com/in/ja-datatech-consulting-741693217/">Facebook</a></p>
-    <p><a href="https://www.linkedin.com/in/ja-datatech-consulting-741693217/">Twitter</a></p>
   </div>
   <div class="modal-footer">
   <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
